<resources>
    <string name="app_name">Reparto SAHUAYO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sahuayo</string>
    <string name="nav_header_subtitle">Reparto</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_fragment">COMBUSTIBLE</string>
    <string name="img_combust">Combustible</string>
    <string name="imp_gasto">Importe De Gasto</string>
    <string name="tip_gasto">Tipo De Gasto</string>
    <string name="boton_terminar">TERMINAR </string>

    <string name="title2">MANIOBRAS</string>
    <string name="folio">Folio Guía</string>


    <string name="menu_home">Recepcion Unidad</string>
    <string name="menu_gallery">Salida Cedis</string>
    <string name="menu_slideshow">Evento</string>
    <string name="menu_tools">Facturas</string>
    <string name="gastos">Gastos</string>
    <string name="llegada">Llegada Cedis</string>
    <string name="entrega">Entrega Unidad</string>


    <string name="menu_share">Resumen Liquidación</string>
    <string name="menu_send">Reporte Devolución</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
